<resources>

    <string name="app_name">Gamves</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Cast Strings -->
    <string name="cast_app_id">EB739D59</string>
    <string name="play_video">Play Video</string>
    <string name="pause_video">Pause Video</string>
    <string name="resume_video">Resume Video</string>
    <string name="video_title">Chromecast Video</string>
    <string name="content_type_mp4">video/mp4</string>


    <string name="language_0" translatable="false">All</string>
    <string name="language_1" translatable="false">7N6FmcRutH</string>
    <string name="language_2" translatable="false">bmG2qv6jPX</string>

    <string name="language_name_0" translatable="false">All</string>
    <string name="language_name_1" translatable="false">English</string>
    <string name="language_name_2" translatable="false">Spanish</string>

    <string name="loading_dialog_capture_description">Preparing capture&#8230;</string>

    <string name="your_daily_feed">YOUR DAILY FEED</string>

    <string name="snack_close">CLOSE</string>

    <string name="description">Media Controls</string>

    <string name="offline_saved_on">Saved on</string>
    <string name="offline_dots">&#8230;</string>

    <string name="top_snackbar_cellular">Watching on cellular data! Video will take a bit longer to load.</string>
    <string name="top_snackbar_no_internet">No Internet connection :( Please check your data settings!</string>

    <string name="video_detail_description">DESCRIPTION</string>
    <string name="video_detail_share_title">Share Video</string>
    <string name="video_detail_delete_title">Delete Video</string>
    <string name="video_detail_delete_text">Are you sure you want to delete this video?</string>

    <string name="video_detail_share_page_text">I just watched \"%1$s\" on @ShallTVApp %2$s</string>

    <string name="video_detail_delete_cancel">CANCEL</string>
    <string name="video_detail_delete_confirm">DELETE</string>

    <string name="download_notification_title">Downloading</string>
    <string name="download_notification_text">Download in progress</string>

    <string name="video_delete">Delete</string>
    <string name="video_download">Download</string>
    <string name="video_capture">Capture</string>
    <string name="video_share">Share</string>

    <string name="video_featured_title">FEATURED</string>

    <string name="fan_page_subscribe">SUBSCRIBE</string>
    <string name="fan_page_unsubscribe">UNSUBSCRIBE</string>

    <string name="fan_page_about_details">The user wants to be mysterious.</string>
    <string name="fan_page_about_title">ABOUT</string>

    <string name="fan_page_share_button">Share</string>
    <string name="fan_page_open_browser">Open on Browser</string>

    <string name="like_video_button">Like</string>
    <string name="likenot_video_button">Dislike</string>


    <!--SUSCRIPTION-->
    <string name="hint_password">Password</string>
    <string name="hint_user">User name</string>
    <string name="btn_login">Login</string>

    <string name="register_message">Please ask your parents for registration credentials and come back. They should register first in order to give you access.</string>

    <string name="login_segmented_button">Login</string>
    <string name="register_segmented_button">Register</string>

    <string name="btn_try_again">Try again</string>

</resources>
