<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/videoActivityView"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/videocontainer"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:background="@color/black">

        <com.gamves.gamvescommunity.utils.WideVideoView
            android:id="@+id/videoview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="center" />

        <include
            android:id="@+id/include_media"
            layout="@layout/media_controller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom" />

    </FrameLayout>

    <RelativeLayout
        android:id="@+id/videoinfo"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@+id/videocontainer"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="4">

                <TextView
                    android:id="@+id/video_title"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/video_detail_description"
                    android:textColor="@color/gray_50"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/video_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="left"
                    android:text="@string/video_detail_description"
                    android:textColor="@color/gray_40"
                    android:textSize="12sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="6"
                android:weightSum="10">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="5">

                    <ImageView
                        android:id="@+id/like_image"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/like"
                        android:layout_margin="@dimen/md_listitem_vertical_margin_choice"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/like_video_button"
                        android:textColor="@color/gray_40"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="5">

                    <ImageView
                        android:id="@+id/likenot_image"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/likenot"
                        android:layout_margin="@dimen/md_listitem_vertical_margin_choice"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/likenot_video_button"
                        android:textColor="@color/gray_40"
                        android:textSize="16sp" />


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/video_title_icon"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/videoinfo"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <View
            android:id="@+id/lineEditTop"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:backgroundTint="@color/gray_50"/>

        <LinearLayout
            android:id="@+id/chat_room"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:paddingLeft="10dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/chat" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="Chat Group"
                android:textColor="#b6b6b6"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:id="@+id/lineEditBottom"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:backgroundTint="@color/gray_50"
            android:layout_below="@+id/chat_room"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerChat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lineEdit"
        android:layout_below="@+id/video_title_icon"/>

    <View
        android:id="@+id/lineEdit"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_200"
        android:layout_marginBottom="50dp"
        android:layout_alignParentBottom="true"/>

    <RelativeLayout
        android:id="@+id/editLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="bottom"
        android:layout_alignParentBottom="true">

        <EditText
            android:id="@+id/editWriteMessage"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edittext_boder"
            android:drawablePadding="20dp"
            android:inputType="textLongMessage"
            android:maxLines="4"
            android:paddingLeft="7dp"
            android:textColorHint="#aeafaf"
            android:textSize="15sp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp" />

        <ImageButton
            android:id="@+id/btnSend"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="#00000000"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:scaleType="centerInside"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_send"/>

    </RelativeLayout>


    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/progress_balls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/videocontainer"
        android:layout_alignTop="@+id/videocontainer"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:alpha="0"
        android:visibility="visible"
        app:indicator="BallPulse"
        app:indicator_color="@color/white" />

    <ImageView
        android:id="@+id/vr_fullscreen_toggle"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="right|top"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/cardboard" />

    <ImageView
        android:id="@+id/vr_format_toggle"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="false"
        android:layout_alignParentTop="true"
        android:layout_gravity="right|top"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:alpha="0.6"
        android:src="@drawable/formatvr"
        android:visibility="gone" />


</RelativeLayout>